# rag-demo

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  index.ipynb  pyproject.toml
notebooks/: embedding_models.ipynb  qdrant-tutor.ipynb
