[tool.poetry]
name = "raghandson"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gradio = "^4.41.0"
qdrant-client = "^1.11.0"
polars = "^1.5.0"
openai = "^1.41.0"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
sentence-transformers = "^3.0.1"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
